# BrowserConductor

./: .replit  LOCAL_SETUP_AI.md  ai_vision_guide.md  app.py  bypass_detection_guide.md  config.py  debug_selectors.py  improved_instructions.md  local_setup.md  main.py  models_flask.py  orders.db  pyproject.toml  quick_debug.py  replit.md  requirements.txt  routes.py  run_local.py  run_smart.py  run_stealth.py  setup_local.py  test_ai_vision.py  web_interface.py
agents/: ai_vision_agent.py  login_agent.py  order_agent.py  reminder_agent.py  return_agent.py  smart_login_agent.py  stealth_login_agent.py
attached_assets/: Pasted-Build-a-Python-based-multi-agent-browser-automation-system-that-interacts-with-https-www-ajio-com--1752561904932_1752561904933.txt
models/: __init__.py  order.py
templates/: dashboard.html
tests/: test_agents.py
utils/: crawl4ai_helper.py  database.py  popup_handler.py
