[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "beautifulsoup4>=4.13.4",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "playwright>=1.53.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "trafilatura>=2.0.0",
    "typer>=0.16.0",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.2.0",
]
